<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_prioritize"
        android:showAsAction="always"
        android:title="@string/action_prioritize"
        android:icon="@drawable/navigation_accept"/>
    <item
        android:id="@+id/action_addTask"
        android:showAsAction="always"
        android:title="@string/action_addTask"
        android:icon="@drawable/content_new"/>
    <item
        android:id="@+id/action_showCategories"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_showCategories"
        android:icon="@drawable/collections_view_as_grid"/>
    
	<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
