<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_category"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/txt_category_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/label_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
    	android:layout_marginTop="@dimen/activity_vertical_margin"
        />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:background="#FFFDFDFD"
        >
    
        <Button
        android:id="@+id/add_category_button_cancel"
        android:text="@string/action_cancel"
        android:onClick="onCancelClick"
        android:layout_weight="0.5"
        style="@style/Form.lmaas.formButton"
        />
        
        <View
            style="@style/Form.lmaas.verticalDivider" 
            />
        
        <Button
        android:id="@+id/add_category_button_save"
        android:text="@string/action_save"
        android:onClick="onSaveClick"
        android:layout_weight="0.5"
        style="@style/Form.lmaas.formButton"
        />
        
    </LinearLayout>
    

</LinearLayout>
